<resources>
    <string name="app_name">Weather App</string>
    <string name="progressDataLodingText">Loading Hourly Data</string>
    <string name="hintCity">City (i.e. Charlotte)</string>
    <string name="hintState">State (i.e. NC)</string>
    <string name="buttonSearch">Submit</string>
	<string name="labelMaximumTemperature">Maximum Temperature:</string>
	<string name="labelMinTemperature">Minimum Temperature: </string>
	<string name="labelFeelsLike">Feels like: </string>
	<string name="labelHumidity">Humidity: </string>
	<string name="labelDewpoint">Dewpoint: </string>
	<string name="labelPressure">Pressure: </string>
	<string name="labelClouds">Clouds: </string>
	<string name="labelWinds">Winds: </string>
</resources>